Fixed off-center button text when in desktop sizes

--- a/app/assets/styles/modules/_container.css
+++ b/app/assets/styles/modules/_container.css
@@ -77,10 +77,5 @@
     &__content-info {
       text-align: left;
     }
-
-    &__button {
-      width: 60px;
-      padding: 0 auto;
-    }
   }
 }
